base html, some CSS, base java

--- a/index.html
+++ b/index.html
@@ -5,8 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" src= "assets/css/style.css">
+
 </head>
 <body>
+
+        <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Saturday Night Live Quiz</h1>
+                </div>
+              </div>
+
+    <div class="container">
     
+
+<form id = "quiz" name = "quiz">
+
+<!-- QUESTION 1 -->
+<p>Chris Farley's character "Matt Foley" lived in a van down by the:</p>
+
+<input type = "radio" id= "mc" name= "question1" value= "Lagoon"> Lagoon <br>
+<input type = "radio" id= "mc" name= "question1" value= "River"> River <br>
+<input type = "radio" id= "mc" name= "question1" value= "Pond"> Pond <br>
+<input type = "radio" id= "mc" name= "question1" value= "Lake"> Lake <br>
+<!-- <br> -->
+<!-- QUESTION 2 -->
+<!-- <p>Gilda Radner had a recurring Weekend Update character named:</p>
+
+<input type = "radio" id= "mc" name= "question1" value= "Betty"> Black Betty Bambalamb <br>
+<input type = "radio" id= "mc" name= "question1" value= "Canadian"> The Canadian from Alabama <br>
+<input type = "radio" id= "mc" name= "question1" value= "Roesanne"> Roseanne Roseannadanna <br>
+<input type = "radio" id= "mc" name= "question1" value= "Roxanne"> Ms. Roxanne Texarkana <br> -->
+<!-- <br> -->
+<!-- QUESTION 3 -->
+<!-- <p>Steve Martin and Dan Aykroyd's Czechoslovakian brothers were Two Wild and Crazy:</p>
+
+<input type = "radio" id= "mc" name= "question1" value= "Spies"> Spies <br>
+<input type = "radio" id= "mc" name= "question1" value= "Pies"> Pies <br>
+<input type = "radio" id= "mc" name= "question1" value= "Flies"> Flies <br>
+<input type = "radio" id= "mc" name= "question1" value= "Guys"> Guys <br> -->
+<!-- <br> -->
+</form>
+
+
+<input id = "button" type = "button" value ="Submit">
+
+<div id ="after_submit">
+    <p id = "number_correct"> </p>
+</div>
+
+</div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script src="assets/javascript/app.js"></script>
 </body>
 </html>
