--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
               </div>
 
     <div class="container">
-    
+
+    <!-- START BUTTON -->
+<div id= "startGame">
+
+    <button type="button" class="btn btn-secondary btn-lg">Start Game!</button>
+</div>
+
+<br>
+<!-- TIMER -->
+<div id= "timer">60
+</div>
+
+<br>
 
 <form id = "quiz" name = "quiz">
 
@@ -30,29 +42,34 @@
 <input type = "radio" id= "mc" name= "question1" value= "River"> River <br>
 <input type = "radio" id= "mc" name= "question1" value= "Pond"> Pond <br>
 <input type = "radio" id= "mc" name= "question1" value= "Lake"> Lake <br>
-<!-- <br> -->
+<br>
 <!-- QUESTION 2 -->
-<!-- <p>Gilda Radner had a recurring Weekend Update character named:</p>
+<p>Gilda Radner had a recurring Weekend Update character named:</p>
 
-<input type = "radio" id= "mc" name= "question1" value= "Betty"> Black Betty Bambalamb <br>
-<input type = "radio" id= "mc" name= "question1" value= "Canadian"> The Canadian from Alabama <br>
-<input type = "radio" id= "mc" name= "question1" value= "Roesanne"> Roseanne Roseannadanna <br>
-<input type = "radio" id= "mc" name= "question1" value= "Roxanne"> Ms. Roxanne Texarkana <br> -->
-<!-- <br> -->
+<input type = "radio" id= "mc" name= "question2" value= "Betty"> Black Betty Bambalamba <br>
+<input type = "radio" id= "mc" name= "question2" value= "Canadian"> The Canadian from Alabama <br>
+<input type = "radio" id= "mc" name= "question2" value= "Roseanne"> Roseanne Roseannadanna <br>
+<input type = "radio" id= "mc" name= "question2" value= "Roxanne"> Ms. Roxanne Texarkana <br> 
+<br>
 <!-- QUESTION 3 -->
-<!-- <p>Steve Martin and Dan Aykroyd's Czechoslovakian brothers were Two Wild and Crazy:</p>
+<p>Steve Martin and Dan Aykroyd's Czechoslovakian brothers were Two Wild and Crazy:</p>
 
-<input type = "radio" id= "mc" name= "question1" value= "Spies"> Spies <br>
-<input type = "radio" id= "mc" name= "question1" value= "Pies"> Pies <br>
-<input type = "radio" id= "mc" name= "question1" value= "Flies"> Flies <br>
-<input type = "radio" id= "mc" name= "question1" value= "Guys"> Guys <br> -->
-<!-- <br> -->
+<input type = "radio" id= "mc" name= "question3" value= "Spies"> Spies <br>
+<input type = "radio" id= "mc" name= "question3" value= "Pies"> Pies <br>
+<input type = "radio" id= "mc" name= "question3" value= "Flies"> Flies <br>
+<input type = "radio" id= "mc" name= "question3" value= "Guys"> Guys <br>
+<br>
+
+<input id = "submit" type = "button" value ="Submit">
+<br>
 </form>
 
 
-<input id = "button" type = "button" value ="Submit">
+
 
 <div id ="after_submit">
+
+    <p id ="message"></p>
     <p id = "number_correct"> </p>
 </div>
 
