--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <br>
 <!-- TIMER -->
-<div id= "timer">60
+<div id= "timer">60 Seconds left
 </div>
 
 <br>
@@ -71,6 +71,7 @@
 
     <p id ="message"></p>
     <p id = "number_correct"> </p>
+    <img id ="gif">
 </div>
 
 </div>
